--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: "1.19"
+          cache: false
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
