--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -133,8 +133,8 @@ jobs:
         run: gcloud auth configure-docker eu.gcr.io
       - name: Pull Python Builder
         run: |
-          docker pull eu.gcr.io/development-156220/fatmouse/python-builder:master
-          docker tag eu.gcr.io/development-156220/fatmouse/python-builder:master fatmouse/python-builder:master
+          docker pull eu.gcr.io/development-156220/fatmouse/python-builder:scalrcore-30909
+          docker tag eu.gcr.io/development-156220/fatmouse/python-builder:scalrcore-30909 fatmouse/python-builder:scalrcore-30909
       - name: Get Current Job Log URL
         uses: Tiryoh/gha-jobid-action@v0
         id: get-job-id
@@ -159,7 +159,7 @@ jobs:
           -v $PWD/fatmouse:/fatmouse \
           -v $GITHUB_OUTPUT:/fatmouse/output \
           -v ~/.scalr-labs:/etc/scalr-labs \
-          fatmouse/python-builder:master python -u clickfile.py te up \
+          fatmouse/python-builder:scalrcore-30909 python -u clickfile.py te up \
           --branch ${{ github.head_ref || github.ref_name }} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
           --skip-ui-build \
@@ -199,7 +199,7 @@ jobs:
           -w /fatmouse \
           -v $PWD/fatmouse:/fatmouse \
           -v ~/.scalr-labs:/etc/scalr-labs \
-          fatmouse/python-builder:master \
+          fatmouse/python-builder:scalrcore-30909 \
           python -u clickfile.py te rm \
           --no-wait ${{ env.RUN_TAG }}
 
