--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -208,22 +208,22 @@ jobs:
     needs: [lint, unit-tests, acc-tests]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Import GPG key
         id: import_gpg
         uses: Scalr/ghaction-import-gpg@v2.1.1
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-      - name: Set Up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+      - id: Auth
+        uses: google-github-actions/auth@v2
         with:
-          project_id: ${{ secrets.DEV_GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.DEV_GCP_SA_KEY }}
-          export_default_credentials: true
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+          credentials_json: ${{ secrets.DEV_GCP_SA_KEY }}
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
       - name: Create Development Tag
         run: |
           BRANCH=${{ github.head_ref || github.ref_name }}
