fixed release upload to staging registry

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -2,13 +2,17 @@ name: default
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - release/**
     paths-ignore:
       - CHANGELOG.md
       - CONTRIBUTING.md
       - README.md
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - release/**
     paths-ignore:
       - CHANGELOG.md
       - CONTRIBUTING.md
