--- a/.github/workflows/default_release.yml
+++ b/.github/workflows/default_release.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Create Development Tag
         run: |
           BRANCH=${{ github.head_ref || github.ref_name }}
-          git tag v1.0.0-rc-$BRANCH
+          CLEAN_BRANCH=$(echo "$BRANCH" | sed 's/[\/]/-/g')
+          git tag v1.0.0-rc-$CLEAN_BRANCH
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
