SCALRCORE-32442 Show who and when created/updated the variable

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,11 @@
 *.out
 
 terraform-provider-scalr
+terraform-provider-scalr_*
 *.code-workspace
 .DS_Store
 
 # CI generated
 gha-creds-*.json
+
+covprofile
