--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -159,9 +159,11 @@ jobs:
           docker run --rm \
           -e GITHUB_WORKSPACE=true \
           -e GITHUB_OUTPUT=/fatmouse/output \
+          -e GITHUB_STEP_SUMMARY=/fatmouse/step_summary \
           -w /fatmouse \
           -v $PWD/fatmouse:/fatmouse \
           -v $GITHUB_OUTPUT:/fatmouse/output \
+          -v $GITHUB_STEP_SUMMARY:/fatmouse/step_summary \
           -v ~/.scalr-labs:/etc/scalr-labs \
           fatmouse/python-builder:master python -u clickfile.py te up \
           --branch ${{ github.head_ref || github.ref_name }} \
