--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -20,6 +20,14 @@ jobs:
     name: Backport
     runs-on: ubuntu-latest
     steps:
+    - name: Sudo GitHub Token
+      id: sudo_github_token
+      uses: tibdex/github-app-token@v1.8.2
+      with:
+        app_id: ${{vars.SUDO_GHA_APP_ID}}
+        installation_id: ${{vars.SUDO_GHA_APP_INSTALLATION_ID}}
+        private_key: ${{secrets.SUDO_GHA_APP_PRIVATE_KEY}}
+
     - name: Checkout
       uses: actions/checkout@v4
       with:
@@ -31,7 +39,7 @@ jobs:
       uses: Scalr/actions/2-pr-backport@SCALRCORE-33146
       with:
         approval_bot_token: ${{secrets.SCALR_BUILDBOT_TOKEN}}
-        token: ${{github.token}}
+        token: ${{steps.sudo_github_token.outputs.token}}
         branches_ordering_rule: >-
           release/*.*.*
           master
